--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,5 @@
 browser=chrome
+webTableUrl = https://web-table-2.cydeo.com/login
 
 #comment using #hash sign
 #method should accept 'key' as a String and return 'value' as a String
