--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,7 @@
 browser=chrome
 webTableUrl = https://web-table-2.cydeo.com/login
+webTableUsername = Test
+webTablePassword = Tester
 
 #comment using #hash sign
 #method should accept 'key' as a String and return 'value' as a String
